--- a/.travis.yml
+++ b/.travis.yml
@@ -35,11 +35,11 @@ jobs:
   include:
     - stage: danger
       script: bundle exec danger
-    - stage: pr
-      script: ruby ./ci/pr_tasks.rb
+    - stage: build
+      script: ruby ./ci/build.rb
 
 stages:
   - name: danger
     if: type IN (pull_request)
-  - name: pr
-    if: type IN (pull_request)
+  - name: build
+    if: type IN (push)
