--- a/.travis.yml
+++ b/.travis.yml
@@ -42,4 +42,4 @@ stages:
   - name: danger
     if: type IN (pull_request)
   - name: build
-    if: type IN (push)
+    if: type IN (push, pull_request)
