--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "28.0.2"
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         applicationId "com.levibostian.tellerexample"
@@ -30,9 +30,9 @@ android {
 
 dependencies {
     def lifecycle_version = "1.1.1"
-    def room_version = "1.1.0"
+    def room_version = "1.1.1"
     def retrofit_version = "2.4.0"
-    def support_lib_version = "28.0.0-beta01"
+    def support_lib_version = "28.0.0"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$support_lib_version"
@@ -53,7 +53,7 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
     implementation "com.squareup.okhttp3:logging-interceptor:3.10.0"
     implementation 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0'
-    implementation 'com.evernote:android-job:1.2.5'
+    implementation 'com.evernote:android-job:1.2.6'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
