--- a/teller/build.gradle
+++ b/teller/build.gradle
@@ -35,6 +35,7 @@ dokka {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
     implementation "io.reactivex.rxjava2:rxjava:2.1.13"
 
     // JUnit
