--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,12 +46,12 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:$room_version"
     implementation "android.arch.persistence.room:rxjava2:$room_version"
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation "io.reactivex.rxjava2:rxjava:2.1.13"
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
     implementation 'com.google.code.gson:gson:2.8.4'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    implementation "com.squareup.okhttp3:logging-interceptor:3.10.0"
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0'
     implementation 'com.evernote:android-job:1.2.6'
     testImplementation 'junit:junit:4.12'
