--- a/teller/build.gradle
+++ b/teller/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'org.jetbrains.dokka-android'
+apply plugin: 'jacoco-android'
 
 android {
     compileSdkVersion 28
@@ -21,6 +22,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             multiDexEnabled false
+        }
+        debug {
+            testCoverageEnabled true
         }
     }
     lintOptions {
