--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.20'
+    ext.kotlin_version = '1.3.21'
     ext.dokka_version = '0.9.17'
+    ext.build_tools_version = "28.0.3"
+
+    ext {
+        teller_version = "0.1.0-alpha"
+        bintrayRepo = 'Teller-Android'
+        libraryName = 'Teller-Android'
+        bintrayPackageName = 'com.levibostian.teller-android'
+        publishedGroupId = 'com.levibostian.teller'
+        libraryDescription = 'Android library that makes your apps faster. Teller facilitates the downloading, saving, and reading of the cached data of your app. Keep your user\'s data fresh and remove those annoying loading screens!'
+        siteUrl = 'https://levibostian.github.io/Teller-Android/'
+        gitUrl = 'https://github.com/levibostian/Teller-Android.git'
+        allLicenses = ["MIT"]
+    }
+
     repositories {
         google()
         jcenter()
