--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -2,7 +2,7 @@
 apply plugin: 'com.github.dcendents.android-maven'
 
 group = publishedGroupId // Maven Group ID for the artifact
-version = libraryVersion
+version = teller_version
 
 install {
     repositories.mavenInstaller {
@@ -56,7 +56,7 @@ if (!System.getenv('CI')) { // Disable block on CI server as an exception will b
         configurations = ['archives']
         pkg {
             repo = bintrayRepo
-            name = bintrayName
+            name = bintrayPackageName
             desc = libraryDescription
             websiteUrl = siteUrl
             vcsUrl = gitUrl
