--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,15 @@ android {
         test.java.srcDirs += sharedTestDir
         androidTest.java.srcDirs += sharedTestDir
     }
+
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
@@ -65,6 +74,11 @@ dependencies {
     implementation "androidx.room:room-rxjava2:$roomVersion"
     testImplementation "androidx.room:room-testing:$roomVersion"
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
+
+    // Navigation
+    def nav_version = "2.1.0"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // RxJava
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
