--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,12 @@ dependencies {
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 
+    // Paging
+    def paging_version = "2.1.0"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+    testImplementation "androidx.paging:paging-common-ktx:$paging_version"
+    implementation "androidx.paging:paging-rxjava2-ktx:$paging_version"
+
     // WorkManager
 //    def workVersion = "1.0.0-alpha11"
 //    implementation "android.arch.work:work-runtime:$workVersion"
