--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -2,20 +2,6 @@ apply plugin: 'maven-publish'
 apply plugin: 'signing'
 apply plugin: 'org.jetbrains.dokka'
 
-// Set up Sonatype repository
-nexusPublishing {
-    repositories {
-        sonatype {
-            stagingProfileId = System.getenv("SONATYPE_STAGING_PROFILE_ID")
-            username = System.getenv("SONATYPE_USERNAME")
-            password = System.getenv("SONATYPE_PASSWORD")
-            version = ext.moduleVersion
-            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
-            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
-        }
-    }
-}
-
 task androidSourcesJar(type: Jar) {
     archiveClassifier.set('sources')
     if (project.plugins.findPlugin("com.android.library")) {
@@ -70,6 +56,20 @@ afterEvaluate {
                         url = "https://$moduleGitHostname/$moduleGitPath"
                         connection = "scm:git@$moduleGitHostname:${moduleGitPath}.git"
                         developerConnection = "scm:git@$moduleGitHostname:${moduleGitPath}.git"
+                    }
+                }
+
+                repositories {
+                    maven {
+                        name = "Sonatype"
+
+                        def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+                        def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+                        url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+                        credentials {
+                            username = System.getenv("GRADLE_PUBLISH_USERNAME")
+                            password = System.getenv("GRADLE_PUBLISH_PASSWORD")
+                        }
                     }
                 }
             }
