--- a/.github/workflows/pr-helper.yml
+++ b/.github/workflows/pr-helper.yml
@@ -15,4 +15,4 @@ jobs:
           readToken: ${{ secrets.READ_ONLY_BOT_TOKEN }}
           writeToken: ${{ secrets.WRITE_ACCESS_BOT_TOKEN }}
           # Sets rules on the types of commits allowed on a specific branch. Example: {"beta": "fix,docs"} gives a warning on the pull request if a pull request is made into the beta branch with a type thats not fix.
-          branchTypeWarning: '{"beta": "fix", "main": "fix"}'
+          branchTypeWarning: '{"main": "fix"}'
