--- a/teller-android/build.gradle
+++ b/teller-android/build.gradle
@@ -36,6 +36,11 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+
+    // Multidex support - required when minSdk < 21
+    debugImplementation 'androidx.multidex:multidex:2.0.1'
 
     // JUnit
     testImplementation 'junit:junit:4.13.2'
@@ -47,8 +52,12 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidTestLibVersion"
     androidTestImplementation "androidx.test.ext:truth:$androidTestLibVersion"
 
+    // RxSharedPreferences
+    testImplementation 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0'
+    androidTestImplementation 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0'
+
     // Truth
-    def truthVersion = "1.1.13"
+    def truthVersion = "1.1.3"
     testImplementation "com.google.truth:truth:$truthVersion"
     androidTestImplementation "com.google.truth:truth:$truthVersion"
 
@@ -59,17 +68,11 @@ dependencies {
 
     // Mockito
     def mockitoVersion = '4.3.1'
-    def mockitoKotlinVersion = '1.6.0'
+    def mockitoKotlinVersion = '4.0.0'
     testImplementation "org.mockito:mockito-core:$mockitoVersion"
-    testImplementation "com.nhaarman:mockito-kotlin-kt1.1:$mockitoKotlinVersion", {
-        exclude group: 'org.jetbrains.kotlin'
-        exclude group: 'org.mockito'
-    }
+    testImplementation "org.mockito.kotlin:mockito-kotlin:$mockitoKotlinVersion"
     androidTestImplementation "org.mockito:mockito-android:$mockitoVersion"
-    androidTestImplementation "com.nhaarman:mockito-kotlin-kt1.1:$mockitoKotlinVersion", {
-        exclude group: 'org.jetbrains.kotlin'
-        exclude group: 'org.mockito'
-    }
+    androidTestImplementation "org.mockito.kotlin:mockito-kotlin::$mockitoKotlinVersion"
 
     // Espresso UI Testing
     def espressoVersion = '3.4.0'
